--- a/index.html
+++ b/index.html
@@ -1,33 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <!-- arquivos css -->
+  <link rel="stylesheet" href="./style/base.css">
+  <!-- fontes google -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
+    <header class="cabecalho">
+        <img src="./images/logo.svg" alt="logo huddle" class="logo-image">
+    </header>
+    <main id="information">
+        <section id="image">
+            <img src="./images/illustration-mockups.svg" alt="ilustração mockups" class="image-illustration">
+        </section>
+        <section class="information-Community">
+            <h1 class="title-information">Build The Community Your Fans Will Love</h1>
+            <p class="text-information">
+                Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. 
+            </p>
+            <button class="btn-register"><a href="#" class="link-btn">Register</a> </button>
+        </section>
+    </main>
+    <div class="contact-network">
+        <img src="./images/logo-facebook.png" alt="logo facebook" class="icon">
+        <img src="./images/logo-twitter.png" alt="logo twitter" class="icon">
+        <img src="./images/logo-instagram.png" alt="logo logo whatsapp" class="icon">
+    </div>
+</body>
+</html>
 
-  Build The Community Your Fans Will Love
+  <!-- 
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  
 
-  Register
+  
 
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
-</body>
-</html>
+  </footer> -->
