--- a/index.html
+++ b/index.html
@@ -35,18 +35,19 @@
         <img src="./images/logo-twitter.png" alt="logo twitter" class="icon">
         <img src="./images/logo-instagram.png" alt="logo logo whatsapp" class="icon">
     </div>
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://www.linkedin.com/in/pedro-salviano-desenvolvedor/" target="_blank">Pedro Salviano</a>.
+      </p>
+    </footer>
 </body>
 </html>
 
-  <!-- 
-
   
 
   
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
+  
+
+ 
