--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
         <img src="./images/logo-instagram.png" alt="logo logo whatsapp" class="icon">
     </div>
     <footer>
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://www.linkedin.com/in/pedro-salviano-desenvolvedor/" target="_blank">Pedro Salviano</a>.
+      <p class="attribution"> 
+        Coded by <a href="https://www.linkedin.com/in/pedro-salviano-desenvolvedor/" target="_blank" class="link-footer">Pedro Salviano</a>.
       </p>
     </footer>
 </body>
