modificação no button

--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
             <p class="text-information">
                 Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. 
             </p>
-            <button class="btn-register"><a href="#" class="link-btn">Register</a> </button>
+            <button class="btn-register link-btn">Register</button>
         </section>
     </main>
-    <div class="contact-network">
-        <img src="./images/logo-facebook.png" alt="logo facebook" class="icon">
-        <img src="./images/logo-twitter.png" alt="logo twitter" class="icon">
-        <img src="./images/logo-instagram.png" alt="logo logo whatsapp" class="icon">
-    </div>
+    <section>
+        <div class="contact-network">
+            <img src="./images/logo-facebook.png" alt="logo facebook" class="icon">
+            <img src="./images/logo-twitter.png" alt="logo twitter" class="icon">
+            <img src="./images/logo-instagram.png" alt="logo logo whatsapp" class="icon">
+        </div>
+    </section>
+    
     <footer>
       <p class="attribution"> 
         Coded by <a href="https://www.linkedin.com/in/pedro-salviano-desenvolvedor/" target="_blank" class="link-footer">Pedro Salviano</a>.
