--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="./images/logo.svg" alt="logo huddle" class="logo-image">
+       <h2><img src="./images/logo.svg" alt="logo huddle" class="logo-image"></h2> 
     </header>
     <main id="information">
         <section id="image">
@@ -30,14 +30,11 @@
             <button class="btn-register link-btn">Register</button>
         </section>
     </main>
-    <section>
         <div class="contact-network">
             <img src="./images/logo-facebook.png" alt="logo facebook" class="icon">
             <img src="./images/logo-twitter.png" alt="logo twitter" class="icon">
             <img src="./images/logo-instagram.png" alt="logo logo whatsapp" class="icon">
         </div>
-    </section>
-    
     <footer>
       <p class="attribution"> 
         Coded by <a href="https://www.linkedin.com/in/pedro-salviano-desenvolvedor/" target="_blank" class="link-footer">Pedro Salviano</a>.
